[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/button_font_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/button_font_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/main_menu/settings/settings_screen.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Piximisa.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="SettingsScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -958.878
margin_top = -538.878
margin_right = 961.122
margin_bottom = 541.122
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMargin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -710.0
margin_top = -340.0
margin_right = 710.0
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MainMargin"]
margin_right = 1420.0
margin_bottom = 633.0

[node name="Panel" type="Panel" parent="MainMargin/NinePatchRect"]
modulate = Color( 0.34902, 0.254902, 0.313726, 0.435294 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainMargin/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -660.0
margin_top = -289.5
margin_right = 500.0
margin_bottom = 381.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer"]
margin_right = 1160.0
margin_bottom = 671.0
dragger_visibility = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer"]
margin_right = 580.0
margin_bottom = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Display" type="VBoxContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 205.0

[node name="DisplayHeader" type="VSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display"]
margin_right = 580.0
margin_bottom = 50.0
size_flags_vertical = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/DisplayHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_right = 580.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Display"

[node name="HSeparator" type="HSeparator" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/DisplayHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_top = 46.0
margin_right = 580.0
margin_bottom = 50.0

[node name="Fullscreen" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display"]
margin_top = 54.0
margin_right = 580.0
margin_bottom = 129.0
size_flags_vertical = 3
split_offset = 90
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/Fullscreen"]
margin_top = 20.0
margin_right = 247.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/Fullscreen"]
margin_left = 259.0
margin_right = 283.0
margin_bottom = 75.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
flat = true
align = 1

[node name="FOV" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display"]
margin_top = 133.0
margin_right = 580.0
margin_bottom = 167.0
size_flags_vertical = 3
split_offset = 72
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/FOV"]
margin_right = 252.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Field of View"

[node name="HSlider" type="HSlider" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/FOV"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
tick_count = 9
ticks_on_borders = true

[node name="Padding" type="CenterContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display"]
margin_top = 171.0
margin_right = 580.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/Padding"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )

[node name="Controls" type="VBoxContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 580.0
margin_bottom = 373.0

[node name="ControlsHeader" type="VSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls"]
margin_right = 580.0
margin_bottom = 50.0
size_flags_vertical = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/ControlsHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_right = 580.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Controls"

[node name="HSeparator" type="HSeparator" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/ControlsHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_top = 46.0
margin_right = 580.0
margin_bottom = 50.0

[node name="LookSensitivity" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls"]
margin_top = 54.0
margin_right = 580.0
margin_bottom = 88.0
size_flags_vertical = 3
split_offset = 23
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/LookSensitivity"]
margin_right = 252.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Look Sensitivity"

[node name="HSlider" type="HSlider" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/LookSensitivity"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
tick_count = 9
ticks_on_borders = true

[node name="ControlMapping" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls"]
margin_top = 92.0
margin_right = 580.0
margin_bottom = 126.0
size_flags_vertical = 3
split_offset = 25
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/ControlMapping"]
margin_right = 269.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Control Mapping"

[node name="Button" type="Button" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/ControlMapping"]
margin_left = 281.0
margin_right = 367.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "        Edit        "
expand_icon = true

[node name="Padding" type="CenterContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls"]
margin_top = 130.0
margin_right = 580.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/Padding"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )

[node name="Audio" type="VBoxContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer"]
margin_top = 377.0
margin_right = 580.0
margin_bottom = 541.0

[node name="AudioHeader" type="VSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio"]
margin_right = 580.0
margin_bottom = 50.0
size_flags_vertical = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/AudioHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_right = 580.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Audio"

[node name="HSeparator" type="HSeparator" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/AudioHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_top = 46.0
margin_right = 580.0
margin_bottom = 50.0

[node name="SFXVolume" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio"]
margin_top = 54.0
margin_right = 580.0
margin_bottom = 88.0
size_flags_vertical = 3
split_offset = 89
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/SFXVolume"]
margin_right = 252.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/SFXVolume"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
tick_count = 9
ticks_on_borders = true

[node name="MusicVolume" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio"]
margin_top = 92.0
margin_right = 580.0
margin_bottom = 126.0
size_flags_vertical = 3
split_offset = 57
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/MusicVolume"]
margin_right = 252.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/MusicVolume"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
tick_count = 9
ticks_on_borders = true

[node name="Padding" type="CenterContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio"]
margin_top = 130.0
margin_right = 580.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/Padding"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )

[node name="Effects" type="VBoxContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer"]
margin_top = 545.0
margin_right = 580.0
margin_bottom = 671.0

[node name="EffectsHeader" type="VSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects"]
margin_right = 580.0
margin_bottom = 50.0
size_flags_vertical = 3
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/EffectsHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_right = 580.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Effects"

[node name="HSeparator" type="HSeparator" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/EffectsHeader"]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_top = 46.0
margin_right = 580.0
margin_bottom = 50.0

[node name="ScreenShake" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects"]
margin_top = 54.0
margin_right = 580.0
margin_bottom = 88.0
size_flags_vertical = 3
split_offset = 69
dragger_visibility = 1

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/ScreenShake"]
margin_right = 252.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Screen Shake"

[node name="HSlider" type="HSlider" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/ScreenShake"]
margin_left = 264.0
margin_right = 580.0
margin_bottom = 34.0
focus_neighbour_right = NodePath("../../../../../../MarginContainer2/Back/Button")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
tick_count = 9
ticks_on_borders = true

[node name="Padding" type="CenterContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects"]
margin_top = 92.0
margin_right = 580.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/Padding"]
margin_left = 290.0
margin_right = 290.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MainMargin/NinePatchRect/MarginContainer/HSplitContainer"]
margin_left = 580.0
margin_right = 1160.0
margin_bottom = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MainMargin/NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -17.0
margin_right = -25.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="HSplitContainer" parent="MainMargin/NinePatchRect/MarginContainer2"]
margin_right = 175.0
margin_bottom = 43.0
size_flags_vertical = 3
split_offset = 25
dragger_visibility = 1

[node name="Button" type="Button" parent="MainMargin/NinePatchRect/MarginContainer2/Back"]
margin_right = 156.0
margin_bottom = 43.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "        Back     "
